#### [1.5.3.1]2016.11.11 * 修复`Body.ToString()`在某种情况下返回`null`的问题

--- a/blqw.Httpdoer/blqw.Httpdoer.nuspec
+++ b/blqw.Httpdoer/blqw.Httpdoer.nuspec
@@ -25,6 +25,8 @@
       #### [1.5.3]2016.11.10
       * 修复`HttpContentType.ChangeCharset`方法返回值错误的问题
       * 优化当响应头的`Content-Type`中不存在`charset`属性时,从`Content-Encoding`中获取
+      #### [1.5.3.1]2016.11.11
+      * 修复`Body.ToString()`在某种情况下返回`null`的问题
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>HttpClient Http WebClient RestClient blqw</tags>
