--- a/blqw.Httpdoer.Extensions/blqw.Httpdoer.Extensions.nuspec
+++ b/blqw.Httpdoer.Extensions/blqw.Httpdoer.Extensions.nuspec
@@ -17,6 +17,8 @@
       修复返回值为具体类型时报错的问题
       [1.2.2] 2016.11.10
       修复`ContentTypeAttribute`特性不生效的问题
+      [1.2.4] 2016.11.17
+      修复bug
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>HttpClient Http WebClient RestClient blqw Httpdoer</tags>
