--- a/blqw.Httpdoer.Extensions/blqw.Httpdoer.Extensions.csproj
+++ b/blqw.Httpdoer.Extensions/blqw.Httpdoer.Extensions.csproj
@@ -34,8 +34,12 @@
       <HintPath>..\packages\blqw.DyCompiler.1.0.0\lib\net45\blqw.DyCompiler.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="blqw.Httpdoer, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\blqw.Httpdoer.1.3.1\lib\net45\blqw.Httpdoer.dll</HintPath>
+    <Reference Include="blqw.Httpdoer, Version=1.5.4.4, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.Httpdoer.1.5.4.4\lib\net45\blqw.Httpdoer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="blqw.IOC, Version=1.3.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.IOC.1.3.6\lib\net45\blqw.IOC.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
