--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -35,16 +35,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="blqw.Convert3, Version=3.0.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\blqw.Convert3.3.0.3-beta\lib\net45\blqw.Convert3.dll</HintPath>
+    <Reference Include="blqw.Convert3, Version=3.0.4.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.Convert3.3.0.4.1\lib\net45\blqw.Convert3.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="blqw.IOC, Version=1.3.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\blqw.IOC.1.3.5\lib\net45\blqw.IOC.dll</HintPath>
+    <Reference Include="blqw.IOC, Version=1.3.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.IOC.1.3.6\lib\net45\blqw.IOC.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="blqw.Json, Version=3.1.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\blqw.Json.3.1.2-beta\lib\net45\blqw.Json.dll</HintPath>
+    <Reference Include="blqw.Json, Version=3.1.3.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.Json.3.1.3.1\lib\net45\blqw.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
