--- a/blqw.Httpdoer/blqw.Httpdoer.nuspec
+++ b/blqw.Httpdoer/blqw.Httpdoer.nuspec
@@ -39,6 +39,8 @@
       #### [1.5.4.4]2016.11.24
       * 更新nuget下载没有dll的问题
       * 更新ioc组件版本
+      #### [1.5.4.6] 2016.11.30
+      * 修复无法获取`IHttpBodyParser`的问题
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>HttpClient Http WebClient RestClient blqw</tags>
