--- a/Demo/App.config
+++ b/Demo/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <system.diagnostics>
+    <switches>
+      <add name="blqw.httpdoer" value="-1"/>
+    </switches>
+  </system.diagnostics>
 </configuration>
