--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -32,6 +32,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="blqw.Convert3, Version=3.0.5.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.Convert3.3.0.5.2\lib\net45\blqw.Convert3.dll</HintPath>
+    </Reference>
+    <Reference Include="blqw.IOC, Version=1.3.8.32545, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.IOC.1.3.8.4\lib\net45\blqw.IOC.dll</HintPath>
+    </Reference>
+    <Reference Include="blqw.Json, Version=3.1.3.32701, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.Json.3.1.3.3\lib\net45\blqw.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\blqw.Httpdoer.Extensions\blqw.Httpdoer.Extensions.csproj">
