--- a/blqw.Httpdoer/blqw.Httpdoer.nuspec
+++ b/blqw.Httpdoer/blqw.Httpdoer.nuspec
@@ -41,6 +41,8 @@
       * 更新ioc组件版本
       #### [1.5.4.6] 2016.11.30
       * 修复无法获取`IHttpBodyParser`的问题
+      #### [1.5.4.7] 2017.01.11
+      * 修复一个逻辑上的错误,多个`Httpdoer`不在共享一个日志对象
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>HttpClient Http WebClient RestClient blqw</tags>
