新增控制`Query`参数中数组和对象的名称解析方式的枚举`ArrayEncodeMode`和`ObjectEncodeMode`

--- a/blqw.Httpdoer/blqw.Httpdoer.csproj
+++ b/blqw.Httpdoer/blqw.Httpdoer.csproj
@@ -62,9 +62,12 @@
     <Compile Include="HttpBodyParsers\HttpStreamBodyParser.cs" />
     <Compile Include="Extensions\HttpParamsExtensions.cs" />
     <Compile Include="Interface\IHttpTracking.cs" />
+    <Compile Include="Params\HttpQuery.cs" />
     <Compile Include="Params\LazyDeserializeBodyParameters.cs" />
     <Compile Include="Reflection\PropertyHandler.cs" />
     <Compile Include="Reflection\PropertyHandlerCollection.cs" />
+    <Compile Include="Sealed\ArrayEncodeMode.cs" />
+    <Compile Include="Sealed\ObjectEncodeMode.cs" />
     <Compile Include="Sealed\URIExtensions.cs" />
     <Compile Include="HttpBodyParsers\HttpBodyDefaultParser.cs" />
     <Compile Include="HttpBodyParsers\HttpFormBodyParser.cs" />
